arreglao el nav

--- a/contacto.html
+++ b/contacto.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <nav class="contenedor flex">
+    <nav class="contenedor flex_nav">
         <div class="flex_enlaces">
             <a href="index.html">Inicio</a>
             <a href="servicios.html">Servicios</a>
