--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
         <div class="contenedor_header">
             <H2>Bienvenido</H2>
             <p>Al oasis de La Condesa, CDMX</p>
-            <button class="botoncito bordeanimado">
-                <span>Reserva una mesa</span>
-            </button>
+            <a href="reservacion.html" class="botoncito bordeanimado">
+                Reserva una mesa
+            </a>
         </div>
     </section>
 
