--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         </div>
 
         <div class="card">
-            <img src="https://lh3.googleusercontent.com/proxy/k5Sckwmyx6SMqww24Jv_Hsjs6rt4d0AnV-UiyLLN4zXMZVBYbmhacWyv6mI5D3CwU8EQZUidJ_B6FgkaQH_jq3s7eFs3kuwzVzy21SuYf8waxrxrdGzNjeN559XZjEpqgFc5rEaAnQ05"/>
+            <img src="https://media-cdn.tripadvisor.com/media/photo-s/14/3c/fa/31/bar-at-4k-restaurant.jpg"/>
             <h3>Lorem ipsum</h3>
             <div class="focus-content">
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum augue eros, feugiat ac luctus non</p>
