--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
             <a href="reservacion.html">Reservacion</a>
             <a href="contacto.html">Contacto</a>
     </nav>
+    <main>
 
     <section class="header">
         <div class="contenedor_header">
@@ -116,7 +117,24 @@
                 <img src="https://1.bp.blogspot.com/-R_Jc06lmrCg/V_mlzw7eanI/AAAAAAAABQA/rd-cCQmnV3sumpGNMTi9tDYqH5Ad9nBNgCEw/s1600/traje-hombre-zegna-marron.png" alt="">
             </div>
         </article>
+    </section class="promo">
+        <article class="promo-grid">
+            <div class="promo-imagen"> </div>
+            <div class="promo-texto">
+                <h2>Gift card</h2>
+                <p>Lorem ipsum dolor sit amet, 
+                    consectetur adipiscing elit.</p>
+                    <a href="#" class="boton-promo botoncito bordeanimado">
+                Compra ahora
+            </a>
+            </div>
+            
+        </article>
+    <section>
+        
     </section>
+
+    </main>
 
 </body>
 </html>
