--- a/index.html
+++ b/index.html
@@ -102,13 +102,12 @@
                     RyuTec
                 </h2>
                 <p>    
-        Since 1985, I have loved having the opportunity to serve great food
-        to our wonderful guests in Las Colinas. Thank all of you for the
-        privilege of hosting your business dinners, birthday celebrations,
-        wedding feasts, and quiet nights out. We're honored that you've
-        chosen to spend time with us.
+        Cras vulputate eu sapien efficitur pulvinar. Vivamus est nulla, 
+                accumsan quis sapien vitae, pulvinar convallis ipsum. Donec iaculis nunc sed 
+                turpis mattis tincidunt ac non sapien. Integer ac ornare dui. Vestibulum augue eros, 
+                feugiat ac luctus non, vestibulum non nunc. Ut semper, urna quis posuere eleifend
         <br>
-        We will always work to earn that privilege.
+       consectetur adipiscing elit. Vestibulum
                 </p>
                 <img src="https://upload.wikimedia.org/wikipedia/commons/6/67/Firma_de_Joaqu%C3%ADn_Baranda.png" alt="">
             </div>
@@ -135,6 +134,10 @@
     </section>
 
     </main>
+
+    <footer>
+        
+    </footer>
 
 </body>
 </html>
