--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
         <article class="promo-grid">
             <div class="promo-imagen"> </div>
             <div class="promo-texto">
-                <h2>Gift card</h2>
+                <h2>Tarjeta de regalo</h2>
                 <p>Lorem ipsum dolor sit amet, 
                     consectetur adipiscing elit.</p>
                     <a href="#" class="boton-promo botoncito bordeanimado">
