seccion de reservacion

--- a/reservacion.html
+++ b/reservacion.html
@@ -12,17 +12,69 @@
 
 <body>
     <nav class="contenedor flex_nav">
-        <div class="flex_enlaces">
-            <a href="index.html">Inicio</a>
+        <a href="index.html">Inicio</a>
             <a href="servicios.html">Servicios</a>
-        </div>
-            <p >RyuTec</p>
-        <div>
-        <div class="flex_enlaces">
+            <p>RyuTec</p>
             <a href="reservacion.html">Reservacion</a>
             <a href="contacto.html">Contacto</a>
-        </div>    
-    </nav>  
+    </nav>
+
+    <main>
+        <section class="header">
+        <div class="contenedor_header">
+            <H2>Reservaciones</H2>
+            <p>Aparta ahora!</p>
+            <a href="reservacion.html" class="botoncito bordeanimado">
+                Reservar
+            </a>
+        </div>
+    </section>
+
+    <section class="horarios">
+        <article class="horarios-art">
+            <h2>Reserva una mesa</h2>
+            <div class="horarios-caja">
+                <p>
+                    Puedes hacer una reservacion en cualquier momento en linea, o llamando a 5555-555   
+                </p>
+                <div class="horas">
+                    <strong>Horarios de atencion:</strong>
+                    <ul>
+                        <li>
+                            <span class="dia">Lunes - Jueves:</span>
+                            <span class="hora">11am - 9pm</span>
+                        </li>
+                        <li>
+                            <span class="dia">Viernes:</span>
+                            <span class="hora">11am - 10pm</span>
+                        </li>
+                        <li>
+                            <span class="dia">Sabado:</span>
+                            <span class="hora">5pm - 9pm</span>
+                        </li>
+                        <li>
+                            <span class="dia">Domingo:</span>
+                            <span class="hora">11am - 9pm</span>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </article>
+    </section>
+    </main>
+
+    <footer>
+        <section class="futer">
+            <div class="futer-ryutec">
+                <img src="/imgs/logo_blanco.png" alt="logo">
+                <h2>RyuTec</h2>
+            </div>
+            <h3>Redes sociales</h3>
+            <h4>2021 © México | Todos los derechos reservados</h4>
+            <h4>Diseñado por RyuTec</h4>
+            <h4>Aviso de Privacidad</h4>
+        </section>
+    </footer>
 
 </body>
 </html>
