--- a/reservacion.html
+++ b/reservacion.html
@@ -20,7 +20,7 @@
     </nav>
 
     <main>
-        <section class="header">
+        <section class="header bg">
         <div class="contenedor_header">
             <H2>Reservaciones</H2>
             <p>Aparta ahora!</p>
