secciones bien prras

--- a/reservacion.html
+++ b/reservacion.html
@@ -22,7 +22,7 @@
     <main>
         <section class="header bg">
         <div class="contenedor_header">
-            <H2>Reservaciones</H2>
+            <H2 class="reservacion">Reservacion</H2>
             <p>Aparta ahora!</p>
             <a href="reservacion.html" class="botoncito bordeanimado">
                 Reservar
