--- a/servicios.html
+++ b/servicios.html
@@ -12,17 +12,75 @@
 
 <body>
     <nav class="contenedor flex_nav">
-        <div class="flex_enlaces">
-            <a href="index.html">Inicio</a>
+        <a href="index.html">Inicio</a>
             <a href="servicios.html">Servicios</a>
-        </div>
-            <p >RyuTec</p>
-        <div>
-        <div class="flex_enlaces">
+            <p>RyuTec</p>
             <a href="reservacion.html">Reservacion</a>
             <a href="contacto.html">Contacto</a>
-        </div>    
-    </nav>  
+    </nav>
+
+    <main>
+        <section class="header bg1">
+        <div class="contenedor_header">
+            <H2>Menús</H2>
+            <p>La mejor comida de Mexico</p>
+            <div class="menus">
+                <a href="#comida" class="botoncito bordeanimado">
+                    Comida
+                </a>
+                <a href="#cena" class="botoncito bordeanimado">
+                    Cena
+                </a>
+                <a href="#postre" class="botoncito bordeanimado">
+                    Postres
+                </a> 
+                <a href="#especial" class="botoncito bordeanimado">
+                    Especial
+                </a>    
+                <a href="#bebida" class="botoncito bordeanimado">
+                    Bebidas
+                </a>   
+                <a href="#niño" class="botoncito bordeanimado">
+                    Niños
+                </a>  
+            </div>
+        </div>
+    </section>
+
+    <section id="comida">
+        <div class="comida"><h1 class="mayus">Comida</h1></div>
+        <div class="comida-grid">
+            <div class="banner mayus">
+                <h2>Guacamole fresco</h2>
+                <p>Vestibulum augue eros, feugiat ac luctus non, 
+                vestibulum non nunc. Ut semper, urna quis posuere eleifend</p>
+                <span class="precio">- $100 -</span>
+            </div>
+            <div class="banner" style="background-image: url(http://viareal.com/images/menus/lunch/guacamole-salad.jpg);">
+            </div>
+        </div>
+    </section>
+
+    <section id="cena">
+
+    </section>
+
+    <section id="postre">
+
+    </section>
+
+    <section id="especial">
+
+    </section>
+
+    <section id="bebida">
+
+    </section>
+
+    <section id="niño">
+
+    </section>
+    </main>
 
 </body>
 </html>
