--- a/servicios.html
+++ b/servicios.html
@@ -56,7 +56,7 @@
                 vestibulum non nunc. Ut semper, urna quis posuere eleifend</p>
                 <span class="precio">- $100 -</span>
             </div>
-            <div class="banner" style="background-image: url(http://viareal.com/images/menus/lunch/guacamole-salad.jpg);">
+            <div class="banner" style="background-image: url(/imgs/guacamole-salad.jpg);">
             </div>
         </div>
     </section>
