--- a/servicios.html
+++ b/servicios.html
@@ -48,7 +48,7 @@
     </section>
 
     <section id="comida">
-        <div class="comida"><h1 class="mayus">Comida</h1></div>
+        <div class="comida-letras"><h1 class="mayus">Comida</h1></div>
         <div class="comida-grid">
             <div class="banner mayus">
                 <h2>Guacamole fresco</h2>
