--- a/servicios.html
+++ b/servicios.html
@@ -27,22 +27,10 @@
             <div class="menus">
                 <a href="#comida" class="botoncito bordeanimado">
                     Comida
-                </a>
-                <a href="#cena" class="botoncito bordeanimado">
-                    Cena
-                </a>
-                <a href="#postre" class="botoncito bordeanimado">
-                    Postres
-                </a> 
-                <a href="#especial" class="botoncito bordeanimado">
-                    Especial
-                </a>    
+                </a>  
                 <a href="#bebida" class="botoncito bordeanimado">
                     Bebidas
-                </a>   
-                <a href="#niño" class="botoncito bordeanimado">
-                    Niños
-                </a>  
+                </a>
             </div>
         </div>
     </section>
@@ -59,28 +47,234 @@
             <div class="banner" style="background-image: url(/imgs/guacamole-salad.jpg);">
             </div>
         </div>
-    </section>
-
-    <section id="cena">
-
-    </section>
-
-    <section id="postre">
-
-    </section>
-
-    <section id="especial">
-
+        <div class="comida-grid invertido">
+            <div class="banner mayus texto">
+                <h2>Enchiladas</h2>
+                <p>Vestibulum augue eros, feugiat ac luctus non, 
+                vestibulum non nunc. Ut semper, urna quis posuere eleifend</p>
+                <span class="precio">- $100 -</span>
+            </div>
+            <div class="banner imagen" style="background-image: url(/imgs/adobo-shrimp-crab-enchiladas.jpg);">
+            </div>
+        </div>
+        <div class="comida-grid">
+            <div class="banner mayus">
+                <h2>Cabo san lucas</h2>
+                <p>Vestibulum augue eros, feugiat ac luctus non, 
+                vestibulum non nunc. Ut semper, urna quis posuere eleifend</p>
+                <span class="precio">- $100 -</span>
+            </div>
+            <div class="banner" style="background-image: url(/imgs/cabo-san-lucas.jpg);">
+            </div>
+        </div>
+        <div class="comida-grid">
+            <div class="banner mayus texto">
+                <h2>Ceviche</h2>
+                <p>Vestibulum augue eros, feugiat ac luctus non, 
+                vestibulum non nunc. Ut semper, urna quis posuere eleifend</p>
+                <span class="precio">- $100 -</span>
+            </div>
+            <div class="banner" style="background-image: url(/imgs/ceviche.jpg);">
+            </div>
+        </div>
+        <div class="comida-grid">
+            <div class="banner mayus">
+                <h2>Pollo a la Monterrey</h2>
+                <p>Vestibulum augue eros, feugiat ac luctus non, 
+                vestibulum non nunc. Ut semper, urna quis posuere eleifend</p>
+                <span class="precio">- $100 -</span>
+            </div>
+            <div class="banner" style="background-image: url(/imgs/chicken-monterey.jpg);">
+            </div>
+        </div>
+        <div class="comida-grid">
+            <div class="banner mayus texto">
+                <h2>Nuggets de pollo</h2>
+                <p>Vestibulum augue eros, feugiat ac luctus non, 
+                vestibulum non nunc. Ut semper, urna quis posuere eleifend</p>
+                <span class="precio">- $100 -</span>
+            </div>
+            <div class="banner" style="background-image: url(/imgs/chicken-nuggets.jpg);">
+            </div>
+        </div>
+        <div class="comida-grid">
+            <div class="banner mayus">
+                <h2>Lubina chilena</h2>
+                <p>Vestibulum augue eros, feugiat ac luctus non, 
+                vestibulum non nunc. Ut semper, urna quis posuere eleifend</p>
+                <span class="precio">- $100 -</span>
+            </div>
+            <div class="banner" style="background-image: url(/imgs/chilean-sea-bass.jpg);">
+            </div>
+        </div>
+        <div class="comida-grid">
+            <div class="banner mayus texto">
+                <h2>Huevos a la benedicto</h2>
+                <p>Vestibulum augue eros, feugiat ac luctus non, 
+                vestibulum non nunc. Ut semper, urna quis posuere eleifend</p>
+                <span class="precio">- $100 -</span>
+            </div>
+            <div class="banner" style="background-image: url(/imgs/eggs-benedict.jpg);">
+            </div>
+        </div>
+        <div class="comida-grid">
+            <div class="banner mayus">
+                <h2>Enchiladas Mexicanas</h2>
+                <p>Vestibulum augue eros, feugiat ac luctus non, 
+                vestibulum non nunc. Ut semper, urna quis posuere eleifend</p>
+                <span class="precio">- $100 -</span>
+            </div>
+            <div class="banner" style="background-image: url(/imgs/enchiladas-mexicanas.jpg);">
+            </div>
+        </div>
+        <div class="comida-grid">
+            <div class="banner mayus texto">
+                <h2>Escalopas</h2>
+                <p>Vestibulum augue eros, feugiat ac luctus non, 
+                vestibulum non nunc. Ut semper, urna quis posuere eleifend</p>
+                <span class="precio">- $100 -</span>
+            </div>
+            <div class="banner" style="background-image: url(/imgs/escalopas.jpg);">
+            </div>
+        </div>
+        <div class="comida-grid">
+            <div class="banner mayus">
+                <h2>Lomo de cerdo</h2>
+                <p>Vestibulum augue eros, feugiat ac luctus non, 
+                vestibulum non nunc. Ut semper, urna quis posuere eleifend</p>
+                <span class="precio">- $100 -</span>
+            </div>
+            <div class="banner" style="background-image: url(/imgs/pork-loin.jpg);">
+            </div>
+        </div>
+        <div class="comida-grid">
+           <div class="banner mayus texto">
+                <h2>Filete de lomo</h2>
+                <p>Vestibulum augue eros, feugiat ac luctus non, 
+                vestibulum non nunc. Ut semper, urna quis posuere eleifend</p>
+                <span class="precio">- $100 -</span>
+            </div>
+            <div class="banner" style="background-image: url(/imgs/red-oak-smoked-tenderloin.jpg);">
+            </div>
+        </div>
+        <div class="comida-grid">
+            <div class="banner mayus">
+                <h2>Tacos de salmon</h2>
+                <p>Vestibulum augue eros, feugiat ac luctus non, 
+                vestibulum non nunc. Ut semper, urna quis posuere eleifend</p>
+                <span class="precio">- $100 -</span>
+            </div>
+            <div class="banner" style="background-image: url(/imgs/salmon-tacos.jpg);">
+            </div>
+        </div>
+        <div class="comida-grid">
+            <div class="banner mayus texto">
+                <h2>Camarones</h2>
+                <p>Vestibulum augue eros, feugiat ac luctus non, 
+                vestibulum non nunc. Ut semper, urna quis posuere eleifend</p>
+                <span class="precio">- $100 -</span>
+            </div>
+            <div class="banner" style="background-image: url(/imgs/shrimp-cocktail.jpg);">
+            </div>
+        </div>
+        <div class="comida-grid">
+            <div class="banner mayus">
+                <h2>Botana</h2>
+                <p>Vestibulum augue eros, feugiat ac luctus non, 
+                vestibulum non nunc. Ut semper, urna quis posuere eleifend</p>
+                <span class="precio">- $100 -</span>
+            </div>
+            <div class="banner" style="background-image: url(/imgs/tenderloin-tips.jpg);">
+            </div>
+        </div>
+        <div class="comida-letras"><h1 class="mayus">Postres</h1></div>
+        <div class="comida-grid">
+            <div class="banner mayus">
+                <h2>Pastel de chocolate y frambuesa</h2>
+                <p>Vestibulum augue eros, feugiat ac luctus non, 
+                vestibulum non nunc. Ut semper, urna quis posuere eleifend</p>
+                <span class="precio">- $100 -</span>
+            </div>
+            <div class="banner" style="background-image: url(/imgs/chocolate-raspberry-cake.jpg);">
+            </div>
+        </div>
+        <div class="comida-grid">
+            <div class="banner mayus texto">
+                <h2>Wafles</h2>
+                <p>Vestibulum augue eros, feugiat ac luctus non, 
+                vestibulum non nunc. Ut semper, urna quis posuere eleifend</p>
+                <span class="precio">- $100 -</span>
+            </div>
+            <div class="banner" style="background-image: url(/imgs/homemade-waffles-made-to-order.jpg);">
+            </div>
+        </div>
+        <div class="comida-grid">
+            <div class="banner mayus">
+                <h2>Flan de vainilla</h2>
+                <p>Vestibulum augue eros, feugiat ac luctus non, 
+                vestibulum non nunc. Ut semper, urna quis posuere eleifend</p>
+                <span class="precio">- $100 -</span>
+            </div>
+            <div class="banner" style="background-image: url(/imgs/vanilla-bean-flan.jpg);">
+            </div>
+        </div>
+        <div class="comida-grid">
+            <div class="banner mayus texto">
+                <h2>Creme brulee</h2>
+                <p>Vestibulum augue eros, feugiat ac luctus non, 
+                vestibulum non nunc. Ut semper, urna quis posuere eleifend</p>
+                <span class="precio">- $100 -</span>
+            </div>
+            <div class="banner" style="background-image: url(/imgs/white-chocolate-creme-brulee.jpg);">
+            </div>
+        </div>
     </section>
 
     <section id="bebida">
-
+        <div class="comida-letras"><h1 class="mayus">Bebidas</h1></div>
+        <div class="comida-grid">
+            <div class="banner mayus">
+                <h2>Margarita</h2>
+                <p>Vestibulum augue eros, feugiat ac luctus non, 
+                vestibulum non nunc. Ut semper, urna quis posuere eleifend</p>
+                <span class="precio">- $100 -</span>
+            </div>
+            <div class="banner" style="background-image: url(/imgs/chinaco-the-house-margarita.jpg);">
+            </div>
+        </div>
+        <div class="comida-grid">
+            <div class="banner mayus texto">
+                <h2>Vino</h2>
+                <p>Vestibulum augue eros, feugiat ac luctus non, 
+                vestibulum non nunc. Ut semper, urna quis posuere eleifend</p>
+                <span class="precio">- $100 -</span>
+            </div>
+            <div class="banner" style="background-image: url(/imgs/wines.jpg);">
+            </div>
+        </div>
     </section>
 
-    <section id="niño">
-
+    <section class="descarga-menu">
+        <div class="descargamenu banner mayus">
+            <h2>Lleva nuestro menu contigo</h2>
+            <p>Vestibulum augue eros, feugiat ac luctus non</p>
+            <a href="#" class="btnn">Descarga el menu</a>
+        </div>
     </section>
     </main>
+
+    <footer>
+        <section class="futer">
+            <div class="futer-ryutec">
+                <img src="/imgs/logo_blanco.png" alt="logo">
+                <h2>RyuTec</h2>
+            </div>
+            <h3>Redes sociales</h3>
+            <h4>2021 © México | Todos los derechos reservados</h4>
+            <h4>Diseñado por RyuTec</h4>
+            <h4>Aviso de Privacidad</h4>
+        </section>
+    </footer>
 
 </body>
 </html>
