--- a/contacto.html
+++ b/contacto.html
@@ -12,17 +12,55 @@
 
 <body>
     <nav class="contenedor flex_nav">
-        <div class="flex_enlaces">
-            <a href="index.html">Inicio</a>
+        <a href="index.html">Inicio</a>
             <a href="servicios.html">Servicios</a>
-        </div>
-            <p >RyuTec</p>
-        <div>
-        <div class="flex_enlaces">
+            <p>RyuTec</p>
             <a href="reservacion.html">Reservacion</a>
             <a href="contacto.html">Contacto</a>
-        </div>    
-    </nav>  
+    </nav>
+
+    <main>
+        <section class="header contactobg">
+        <div class="contenedor_header">
+            <H2>Contacto</H2>
+        </div>
+    </section>
+
+    <form class="formulario arriba">
+        <div class="campo">
+            <label for="nombre" class="campo-label">Nombre</label>
+            <input type="text" placeholder=" Tu Nombre" id="nombre"
+            class="campo-fiel">
+        </div>
+        <div class="campo">
+            <label for="email" class="campo-label">E-mail</label>
+            <input type="email" placeholder=" Tu e-mail" id="email"
+            class="campo-fiel">
+        </div>
+        <div class="campo">
+            <label for="mensaje" class="campo-label">Mensaje</label>
+            <textarea name="" id="mensaje"
+            class="campo-fiel campo-fiel-textarea"></textarea>
+        </div>
+
+        <div class="campo">
+            <input type="submit" value="Enviar" class="btnn">
+        </div>
+    </form>
+    </main>
+
+    <footer>
+        <section class="futer">
+            <div class="futer-ryutec">
+                <img src="/imgs/logo_blanco.png" alt="logo">
+                <h2>RyuTec</h2>
+            </div>
+            <h3>Redes sociales</h3>
+            <h4>2021 © México | Todos los derechos reservados</h4>
+            <h4>Diseñado por RyuTec</h4>
+            <h4>Aviso de Privacidad</h4>
+        </section>
+    </footer>
 
 </body>
 </html>
